<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#151515"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tvLabel"
            android:layout_width="369dp"
            android:layout_height="47dp"
            android:layout_marginBottom="72dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/signin_screen_label"
            android:textColor="#F2F2F3"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.147"
            app:lineHeight="36dp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/signin_screen_emailText"
            android:textColor="#F2F2F3"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/edEmailContainer"
            app:layout_constraintEnd_toEndOf="@+id/edEmailContainer"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edEmailContainer"
            app:lineHeight="18dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edEmailContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:textColorHint="#979797"
            app:boxBackgroundColor="#32333A"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="#979797"
            app:boxStrokeWidthFocused="1dp"
            app:helperText=""
            app:helperTextTextColor="#FF0000"
            app:hintTextColor="#979797"
            app:layout_constraintEnd_toEndOf="@+id/tvLabel"
            app:layout_constraintStart_toStartOf="@+id/tvLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signin_screen_emailTextHint"
                android:inputType="textEmailAddress"
                android:textColor="#F2F2F3"
                android:textColorHint="#FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/signin_screen_passText"
            android:textColor="#F2F2F3"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/edPasswordContainer"
            app:layout_constraintEnd_toEndOf="@+id/edPasswordContainer"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edPasswordContainer"
            app:lineHeight="18dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edPasswordContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:textColorHint="#979797"
            app:boxBackgroundColor="#32333A"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="#979797"
            app:boxStrokeWidthFocused="1dp"
            app:helperText=""
            app:helperTextTextColor="#FF0000"
            app:hintTextColor="#979797"
            app:layout_constraintEnd_toEndOf="@+id/edEmailContainer"
            app:layout_constraintStart_toStartOf="@+id/edEmailContainer"
            app:layout_constraintTop_toBottomOf="@+id/edEmailContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signin_screen_passTextHint"
                android:inputType="text|textPassword"
                android:textColor="#F2F2F3" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:backgroundTint="#12B956"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/signin_screen_label"
            app:layout_constraintEnd_toEndOf="@+id/edPasswordContainer"
            app:layout_constraintHorizontal_bias="0.812"
            app:layout_constraintStart_toStartOf="@+id/edPasswordContainer"
            app:layout_constraintTop_toBottomOf="@+id/edPasswordContainer" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/signin_screen_textView"
            android:textColor="#F2F2F3"
            app:layout_constraintEnd_toEndOf="@+id/bSignIn"
            app:layout_constraintHorizontal_bias="0.355"
            app:layout_constraintStart_toStartOf="@+id/bSignIn"
            app:layout_constraintTop_toBottomOf="@+id/bSignIn" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/signin_screen_textViewSignUp"
            android:textColor="#12B956"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/signin_screen_textViewRePass"
            android:textColor="#12B956"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="204dp"
            android:layout_marginTop="64dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/bSignIn"
            app:layout_constraintStart_toStartOf="@+id/bSignIn"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/bVk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:backgroundTint="#2683ED"
                app:icon="@drawable/ic_vk"
                app:iconGravity="textStart"
                app:iconSize="32dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/bOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:backgroundTint="#F95D00"
                app:icon="@drawable/ic_ok"
                app:iconGravity="textStart"
                app:iconSize="30dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>